tests/paczka1/small_fuzzy/74062092.err
Error in line 4: iMdxon4b A357 18,4
Error in line 6: V39Vq S245 5,8
Error in line 7: V39Vq A527 42,2
